# Roads2DGenerator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_simple.sh  msvc2022_build_simple.bat
src/: Roads2DGenerator.cpp  Roads2DGenerator.h  Roads2DGeneratorUnigineSplineGraph.cpp  Roads2DGeneratorUnigineSplineGraph.h  main.cpp
tests/: CMakeLists.txt  test_connected_points.cpp  test_connected_points_more.cpp  test_pseudo_random.cpp
